@startuml
interface NamedEntityRecognizer
class NamedEntityRecognizerManager
class PersonNamedEntityRecognizer
class TokenRecognizer

interface NamedEntity
class NamedEntityImpl
class RecognizerResult

NamedEntityRecognizerManager ...> NamedEntityRecognizer : return
NamedEntityRecognizer <|... PersonNamedEntityRecognizer
PersonNamedEntityRecognizer <|--- TokenRecognizer
NamedEntityRecognizer ....> RecognizerResult : return
RecognizerResult o--- NamedEntity
NamedEntity <|... NamedEntityImpl
@enduml